# lakehouse-tacklebox

./: CONTRIBUTING.md  LICENSE  README.md
00-quickstarts/: README.md
00-quickstarts/databricks-concurrency/: 01-concurrency-testing-notebook.py  concurrency_framework_1.0.py
00-quickstarts/design-patterns/: Step 1 - SQL EDW Pipeline.sql  Step 10 - Lakehouse Federation.py  Step 11 - SQL Orchestration in Production.py  Step 12 - SCD2 - SQL EDW Pipeline.sql  Step 13 - Dynamic & Parameterized SQL.py  Step 13 - Migrating Identity Columns.sql  Step 14 - Generated and Default Columns on Delta.py  Step 14 - Using the Query Profile.sql  Step 15 - Dynamic & Parameterized SQL with Variables.py  Step 16 - Using System Tables.py  Step 9 - Using SQL Functions.py  (+7 more)
10-migrations/: 10-hms-uc-migration.py  README.md  Using DBSQL Serverless Client Example.py  Using DBSQL Serverless Transaction Manager Example.py  Using Delta Helpers Notebook Example.py  Using Delta Logger Example.py  Using Delta Logger.py  Using Delta Merge Helpers Example.py  Using Streaming Tables and MV Orchestrator.py  Using Transaction Manager Example.py
20-operational-excellence/: README.md
30-performance/: README.md
40-observability/: README.md
40-observability/dbsql-query-history-sync/: README.md  pyproject.toml
40-observability/dbsql-query-history-sync/examples/: dbsql_query_sync_example.py  standalone_dbsql_get_query_history_example.py
40-observability/dbsql-query-history-sync/src/: __init__.py
40-observability/dbsql-query-history-sync/src/dbsql_query_history_sync/: delta_sync.py  queries_api.py
(+111 files in other folders)
